# quantedge_x

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  ohlcv_data.parquet  websocat.sh
.github/workflows/: docker-image.yml
benches/: matching_bench.rs
scripts/: setup_db.rs
src/: lib.rs  main.rs
src/api/: route.sh  routes.rs
src/api/handlers/: algorithm.rs  backtest.rs  market_price.rs  mod.rs  trade.rs  trade_strategy.rs  user_auth.rs
src/data/: coin_market.rs  csv_data_feed.rs  data_feed.rs  market_data_bus.rs  market_data_connector.rs  market_data_feed.rs  mod.rs
src/data/duckdb/: initialize_db.rs  mod.rs  types.rs
src/data/fetcher/: common.rs  mod.rs
src/data/sleddb/: chart_db.rs  mod.rs  user_db_manager.rs
src/domain/: executor.rs  mod.rs  order.rs  position_sizer.rs  risk_manager.rs  trade_observer.rs
src/engine/: backtest_result.rs  backtester.rs  lab_observer.rs  mod.rs  observer.rs  parameters.rs  trading_engine.rs
src/engine/matcher/: book.rs
src/executor/: backtest_executor.rs  mod.rs
src/indicators/: calculator.rs  indicator.rs  mod.rs  std_dev_indicator.rs
src/indicators/moving_average/: ema.rs  ema_indicator.rs  ma.rs  ma_type.rs  mod.rs  sma.rs  wma.rs  (+3 more)
src/matcher/: mod.rs
src/models/: candle.rs  candle_aggregator.rs  candle_builder.rs  delta_builder.rs  depth_aggregator.rs  level_update.rs  market_message.rs  market_price_data.rs  mod.rs  order_book_message.rs  order_book_publisher.rs  trade_tick.rs
src/processor/: mod.rs  signal_processor.rs
src/risk/: fixed_risk_manager.rs  mod.rs  risk_manager_factory.rs
src/service/: backtest_service.rs  mod.rs  optimize_service.rs  strategy_service.rs  user_auth_service.rs
src/sizer/: fixed_fractional_sizer.rs  fixed_size_sizer.rs  mod.rs  sizer_factory.rs
src/strategy/: direction.rs  market_data.rs  mean_reversion_strategy.rs  mod.rs  moving_average_strategy.rs  position.rs  signal.rs  strategy_context.rs  strategy_factory.rs  strategy_trait.rs  strategy_type.rs
src/utils/: mod.rs  params.rs  path.rs  time.rs
src/ws/: mod.rs  push_stream.rs
(+88 files in other folders)
