[package]
name = "quantedge_x"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
tokio = { version = "1.36", features = ["full"] }
axum = { version = "0.7.9", features = ["ws"] }
axum-extra = { version = "0.9", features = ["cookie"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
duckdb = { version = "1.2.1", features = ["bundled", "parquet"] }
dotenv = "0.15"
tempfile = "3.8"
rand = "0.8"
uuid = { version = "1.6", features = ["v4"] }
reqwest = { version = "0.12.14", features = ["blocking", "json"] }
sled = "0.34.7"
itertools = "0.12"
csv = "1"
tokio-tungstenite = "0.27.0"
futures-util = "0.3.31"
bincode = "2.0.1"
anyhow = "1.0.98"
async-trait = "0.1.88"
log = "0.4"
env_logger = "0.10"
crossbeam = "0.8.4"
thiserror = "2.0.18"


[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }


[[bench]]
name = "matching_bench"
harness = false

[[bin]]
name = "quantedge_x"
path = "src/main.rs"

[[bin]]
name = "setup_db"
path = "scripts/setup_db.rs"

# [[bin]]`
# name = "backfill_data"
# path = "scripts/backfill_data.rs"
